add references for emulation

--- a/paper/library.bib
+++ b/paper/library.bib
@@ -391,3 +391,106 @@
   doi      = "10.1016/S1473-3099(20)30120-1",
   pmc      = "PMC7159018"
 }
+
+@ARTICLE{Iskauskas2022-fz,
+  title         = "Emulation and History Matching using the hmer Package",
+  author        = "Iskauskas, Andrew and Vernon, Ian and Goldstein, Michael and
+                   Scarponi, Danny and McCreesh, Nicky and McKinley, Trevelyan
+                   J and White, Richard G",
+  month         =  sep,
+  year          =  2022,
+  archivePrefix = "arXiv",
+  eprint        = "2209.05265",
+  primaryClass  = "stat.CO",
+  arxivid       = "2209.05265"
+}
+
+@ARTICLE{Vernon2014-ov,
+  title     = "Galaxy Formation: Bayesian History Matching for the Observable
+               Universe",
+  author    = "Vernon, Ian and Goldstein, Michael and Bower, Richard",
+  journal   = "Stat. Sci.",
+  publisher = "Institute of Mathematical Statistics",
+  volume    =  29,
+  number    =  1,
+  pages     = "81--90",
+  year      =  2014,
+  issn      = "0883-4237, 2168-8745"
+}
+
+@ARTICLE{Williamson2013-qx,
+  title   = "History matching for exploring and reducing climate model
+             parameter space using observations and a large perturbed physics
+             ensemble",
+  author  = "Williamson, Daniel and Goldstein, Michael and Allison, Lesley and
+             Blaker, Adam and Challenor, Peter and Jackson, Laura and Yamazaki,
+             Kuniko",
+  journal = "Clim. Dyn.",
+  volume  =  41,
+  number  =  7,
+  pages   = "1703--1729",
+  month   =  oct,
+  year    =  2013,
+  issn    = "0930-7575, 1432-0894",
+  doi     = "10.1007/s00382-013-1896-4"
+}
+
+@ARTICLE{Edwards2021-lv,
+  title    = "Projected land ice contributions to twenty-first-century sea
+              level rise",
+  author   = "Edwards, Tamsin L and Nowicki, Sophie and Marzeion, Ben and Hock,
+              Regine and Goelzer, Heiko and Seroussi, H{\'e}l{\`e}ne and
+              Jourdain, Nicolas C and Slater, Donald A and Turner, Fiona E and
+              Smith, Christopher J and McKenna, Christine M and Simon, Erika
+              and Abe-Ouchi, Ayako and Gregory, Jonathan M and Larour, Eric and
+              Lipscomb, William H and Payne, Antony J and Shepherd, Andrew and
+              Agosta, C{\'e}cile and Alexander, Patrick and Albrecht, Torsten
+              and Anderson, Brian and Asay-Davis, Xylar and Aschwanden, Andy
+              and Barthel, Alice and Bliss, Andrew and Calov, Reinhard and
+              Chambers, Christopher and Champollion, Nicolas and Choi, Youngmin
+              and Cullather, Richard and Cuzzone, Joshua and Dumas, Christophe
+              and Felikson, Denis and Fettweis, Xavier and Fujita, Koji and
+              Galton-Fenzi, Benjamin K and Gladstone, Rupert and Golledge,
+              Nicholas R and Greve, Ralf and Hattermann, Tore and Hoffman,
+              Matthew J and Humbert, Angelika and Huss, Matthias and
+              Huybrechts, Philippe and Immerzeel, Walter and Kleiner, Thomas
+              and Kraaijenbrink, Philip and Le Clec'h, S{\'e}bastien and Lee,
+              Victoria and Leguy, Gunter R and Little, Christopher M and Lowry,
+              Daniel P and Malles, Jan-Hendrik and Martin, Daniel F and
+              Maussion, Fabien and Morlighem, Mathieu and O'Neill, James F and
+              Nias, Isabel and Pattyn, Frank and Pelle, Tyler and Price,
+              Stephen F and Quiquet, Aur{\'e}lien and Radi{\'c}, Valentina and
+              Reese, Ronja and Rounce, David R and R{\"u}ckamp, Martin and
+              Sakai, Akiko and Shafer, Courtney and Schlegel, Nicole-Jeanne and
+              Shannon, Sarah and Smith, Robin S and Straneo, Fiammetta and Sun,
+              Sainan and Tarasov, Lev and Trusel, Luke D and Van Breedam, Jonas
+              and van de Wal, Roderik and van den Broeke, Michiel and
+              Winkelmann, Ricarda and Zekollari, Harry and Zhao, Chen and
+              Zhang, Tong and Zwinger, Thomas",
+  journal  = "Nature",
+  volume   =  593,
+  number   =  7857,
+  pages    = "74--82",
+  month    =  may,
+  year     =  2021,
+  language = "en",
+  issn     = "0028-0836, 1476-4687",
+  pmid     = "33953415",
+  doi      = "10.1038/s41586-021-03302-y"
+}
+
+@ARTICLE{Castelletti2012-bs,
+  title    = "A general framework for Dynamic Emulation Modelling in
+              environmental problems",
+  author   = "Castelletti, A and Galelli, S and Ratto, M and Soncini-Sessa, R
+              and Young, P C",
+  journal  = "Environmental Modelling \& Software",
+  volume   =  34,
+  pages    = "5--18",
+  month    =  jun,
+  year     =  2012,
+  keywords = "Dynamic emulation modelling; Model reduction; Model complexity;
+              Process-based models; Response surfaces; Metamodelling",
+  issn     = "1364-8152",
+  doi      = "10.1016/j.envsoft.2012.01.002"
+}
