fix anomaly bug from #1

--- a/paper/library.bib
+++ b/paper/library.bib
@@ -494,3 +494,10 @@
   issn     = "1364-8152",
   doi      = "10.1016/j.envsoft.2012.01.002"
 }
+
+@MISC{IPCCreport,
+  title        = "{AR6} Synthesis Report: Climate Change 2022",
+  author = "IPCC",
+  howpublished = "\url{https://www.ipcc.ch/report/sixth-assessment-report-cycle/}",
+  note         = "Accessed: 2022-9-23"
+}
