fix paper issues related to anomaly bug identified #1

--- a/paper/paper.Rmd
+++ b/paper/paper.Rmd
@@ -184,7 +184,7 @@ per_excluded <- round(exclude_forecasts / included_forecasts * 100, 1)
 
 # Forecast dates + locations with anomalies
 exclusions <- metadata |>
-  DT(, .(forecast_date, location, anomaly)) |>
+  DT(, .(target_end_date, location, anomaly)) |>
   unique() |>
   DT(, .(total = .N, exclude = sum(anomaly), include = .N - sum(anomaly))) |>
   DT(, per := round(exclude / total * 100, 1))
@@ -199,11 +199,11 @@ models <- metadata |>
 
 # Number of forecast dates
 forecast_dates <- metadata |>
-  DT(, unique(forecast_date))
+  DT(, uniqueN(target_end_date))
 
 # Models per forecast date
 models_per_forecast <- metadata |>
-  summarise_forecasts_by(by = "forecast_date")
+  summarise_forecasts_by(by = "target_end_date")
 
 # Models per location
 models_per_location <- metadata |>
@@ -215,20 +215,20 @@ locations_per_model <- metadata |>
 
 locs_per_model_single_date <- metadata |>
     summarise_forecasts_by(
-      var = "location", by = c("model", "forecast_date")
+      var = "location", by = c("model", "target_end_date")
     ) |>
     DT(, unique(.SD[n == max(n), .(n)]), by = "model")
 
 locs_per_model_date <- metadata |>
   summarise_forecasts_by(
-    var = "location", by = c("model", "forecast_date")
+    var = "location", by = c("model", "target_end_date")
   ) |>
   DT(locs_per_model_single_date[, .(model, max_n = n)], on = "model") |>
   DT(, n_per := n / max_n) |>
   DT(, .SD[!all(n == max_n)], by = "model")
 
 models_per_loc_date <- metadata |>
-  summarise_forecasts_by(var = "model", by = c("forecast_date", "location"))
+  summarise_forecasts_by(var = "model", by = c("target_end_date", "location"))
 
 # Single target models per location
 single_locs_models_per_loc <- metadata |>
@@ -256,7 +256,7 @@ varying_submissions <- locs_per_model_date |>
 
 # Models coverage of forecast dates
 forecast_dates_by_models <- metadata |>
-  summarise_forecasts_by(var = "forecast_date", by = "model") |>
+  summarise_forecasts_by(var = "target_end_date", by = "model") |>
   DT(order(n)) |>
   DT(, n_per := n / forecast_dates) |>
   DT(, type := fcase(
