--- a/paper/paper.Rmd
+++ b/paper/paper.Rmd
@@ -24,8 +24,8 @@ affiliation:
 abstract: > 
   Multi-model and multi-team ensembles have become increasingly popular as an approach to increase the robustness and performance of infectious disease forecasts, especially during the COVID-19 pandemic. However, these forecasts require a coordinated team to produce and are effectively black boxes. In other fields, resource usage has been reduced by training simplified models that reproduce some of the observed behaviour of more complex models. 
   Here we use observations of the behaviour of the European COVID-19 Forecast Hub ensemble combined with our own forecasting experience, to specify a series of model assumptions modelling incident reported cases of COVID-19. We then develop a forecast model using these assumptions and compare its performance to the European forecast hub ensemble in real-time from the 15th of January 2022 to the 19th of July 2022 over a four-week forecast horizon.
-  We found that this surrogate model performed visibly relatively similarly to a subset of example locations though with increased uncertainty. Unsurprisingly, using the weighted interval score, we concluded that average performance was substantially worse relative to the ensemble forecast but that median performance was more comparable. The majority of the difference in performance was linked to a few forecasts from a period of high incidence. We note that despite performing worse than the hub ensemble the majority of the time our surrogate model showed better calibration, and was less liable to underpredict. The central part of the surrogate model’s forecast distribution performed more similarly to the ensemble forecast’s distribution whilst the tails of the surrogate forecast distribution were responsible for the large majority of the difference in median forecast performance.
-  We conclude that our simplified forecast model may have captured some of the dynamics of the hub ensemble. However more work needs to be done to understand the implicit epidemiological model that represents its behaviour and whether or not this is the optimal choice for stakeholders' requirements. We also conclude that our findings are largely driven by the choice of evaluation measure used by the forecast hub and that if this is misspecified then the forecast hub submissions may not be optimised to forecast users' expectations or requirements. Our work is potentially useful for forecast consumers as a tool for understanding the inherent assumptions of the forecasts they are making use of and to researchers aiming to develop forecast approaches that perform similarly, or better than, current multi-model and multi-team forecast ensembles that are trusted by stakeholders.
+  We found that this surrogate model performed visibly relatively similarly to a subset of example locations though with increased uncertainty. Unsurprisingly, using the weighted interval score, we concluded that average performance was substantially worse relative to the ensemble forecast but that median performance was more comparable. The majority of the difference in performance was linked to a subset of forecasts with worse performance early in 2022. We note that despite performing worse than the hub ensemble the majority of the time our surrogate model showed better calibration, and was less liable to underpredict. The central part of the surrogate model’s forecast distribution performed more similarly to the ensemble forecast’s distribution but maintained a right skewed performance distribution.
+  We conclude that our simplified forecast model may have captured some of the dynamics of the hub ensemble. However, more work needs to be done to understand the implicit epidemiological model that represents its behaviour and whether or not this is the optimal choice for stakeholders' requirements. We also conclude that our findings may be largely driven by the choice of evaluation measure used by the forecast hub and that if this is misspecified then the forecast hub submissions may not be optimised to forecast users' expectations or requirements. Our work is potentially useful for forecast consumers as a tool for understanding the inherent assumptions of the forecasts they are making use of and to researchers aiming to develop forecast approaches that perform similarly, or better than, current multi-model and multi-team forecast ensembles that are trusted by stakeholders.
 bibliography: library.bib
 output:
   bookdown::pdf_book:
@@ -136,6 +136,9 @@ source(here("R", "coverage-plots.R"))
 ```{r data}
 # Load JHU frozen truth data. See data-raw/get-truth.R for munging
 truth <- fread(here("data", "truth.csv"))
+
+# Load observations defined as anomalies
+anomalies <- fread(here("data", "anomalies.csv"))
 
 # Load population data
 population <- fread(here("data", "population.csv"))
@@ -346,6 +349,20 @@ ranges <- c(30, 60, 90)
 
 ```{r coverage}
 coverage <- calc_coverage(scores)
+
+overall_coverage <- coverage |>
+ DT(, .(coverage = round(mean(coverage) * 100, 1)), by = c("model", "range")) |>
+ dcast(range ~ model, value.var = "coverage") |>
+ DT(, target := c(30, 60, 90)) |>
+ DT(, rel_ensemble := round(Ensemble / target * 100, 1) - 100) |>
+ DT(, rel_surrogate := round(Surrogate / target * 100, 1) - 100)
+
+overall_coverage_by_horizon <- coverage |>
+ DT(,
+    .(coverage = round(mean(coverage) * 100, 1)),
+    by = c("model", "range", "horizon")
+  ) |>
+ dcast(range + horizon ~ model, value.var = "coverage")
 ```
 
 ```{r relative-interval-score}
@@ -419,7 +436,7 @@ In addition, ascertainment rates likely reduced over time in most locations due 
 This is in contrast to the early COVID-19 pandemic response for which most nations took similar actions at similar times.
 
 We extracted forecasts starting from the 15th of January until the 19th of July 2022 for all countries covered by the European forecasting hub (nations of the European Union, European Free Trade Agreement, and the United Kingdom, making `r locations` unique locations).
-In total `r nrow(metadata)` forecasts were made across all locations, with unique `r forecast_dates` forecast dates and `r models` independent forecast models (including the European hub baseline model).
+In total `r nrow(metadata)` forecasts were made across all locations, with `r forecast_dates` unique forecast dates and `r models` independent forecast models (including the European hub baseline model).
 Of these models, `r length(global_models)` forecasted in at least 30 locations including our original submission  (referred to as `epiforecasts-EpiNow2` by the hub), and our surrogate model.
 Of the remaining models submitted `r length(local_models)` were submitted in only one location.
 Single location models were clustered in a few locations, particularly Germany and Poland (likely due to the folding of the German/Poland forecasting hub into the European forecasting hub project [@Sherratt2022-ue]).
@@ -428,7 +445,8 @@ Italy was also an outlier with `r single_locs_models_per_loc[location == "IT", n
 
 Across all forecast dates and locations the minimum number of independent forecasts was `r models_per_loc_date[, min(n)]` with the maximum being `r models_per_loc_date[, max(n)]`. The median number of independent forecasts per location and forecast date was `r models_per_loc_date[, median(n)]`. All locations received forecasts from at least `r models_per_location[, min(n)]` models with the median number of forecast models per location being `r models_per_location[, median(n)]`. Coverage of forecast dates varied across submitted models with `r forecast_dates_by_models[n_per == 1, .N]` models submitting for all dates, `r forecast_dates_by_models[n_per >= 0.9, .N]` models submitting for at least 90% of dates, and `r forecast_dates_by_models[n_per < 0.50, .N]` models submitting for fewer than 50% of forecast dates. In general, there was no clear difference in forecast date coverage between models that submitted for all locations vs a small subset but models with partial coverage of locations all also had partial coverage of forecast dates.
 
-`r nrow(anomalies)` observations, stratified by week and location, were defined to be anomalous within the study period by the European forecast hub [@EuroHub].
+`r nrow(anomalies)` observations, stratified by week and location, were defined to be anomalous within the study period by the European forecast hub [@EuroHub]. 
+Forecasts for these observations were excluded as were forecasts for forecast weeks where they were the latest available data.
 Data anomalies were not randomly distributed with some locations being particlarly prone to data revisions including Lithuania (with `r anomalies[location == "LT", .N]` weeks with data anomalies), and Portugal (with `r anomalies[location == "PT", .N]` weeks with data anomalies).
 Anomalies  were also not evenly distributed over time with a higher proportion occurring earlier in the study period (potentially due to our choice to extract data from the 1st of September which effectively truncated anomalies).
 `r per_excluded`% of forecasts were excluded across all horizons due to anomalies in the observed data. Aggregated across horizons `r exclusions$per`% of forecasts included at least one week with anomalous data. 
@@ -437,8 +455,8 @@ Anomalies  were also not evenly distributed over time with a higher proportion o
 
 ### Visualisation of forecasts by horizon {-}
 
-In our example set of locations, the absolute performance of the ensemble and the surrogate model was similar in all locations at short forecast horizons though this varied by location.
-Performance was most similar between the two in Slovakia but in the United Kingdom and Germany in particular the surrogate model performed visibly worse for some forecast dates (Figure \@ref(fig:vis-forecasts)).
+In our example set of locations, the absolute performance of the ensemble and the surrogate model was visually similar on the log scale in all locations at short forecast horizons though this varied by location.
+Performance was most similar in Slovakia but in the United Kingdom and Germany in particular the surrogate model performed visibly worse for some forecast dates (Figure \@ref(fig:vis-forecasts)).
 For both the ensemble and the surrogate, performance visibly decreased as the forecast horizon increased though the relative difference in performance between models was relatively stable across horizons.
 In general, in the study period, the ensemble appeared to be liable to underpredict and the surrogate model appeared more likely to over-predict. 
 Both models forecast large reductions in incidence in Poland during May that did not occur whilst only the ensemble forecast spuriously forecast similar large reductions in Germany during June.
@@ -463,18 +481,18 @@ suppressWarnings(print(p))
 
 ### Relative forecast evaluation {-}
 
-Evaluating the ensemble and surrogate models using the WIS across all locations and forecast dates we found that the mean relative performance of the surrogate model was `r relative_wis_by_horizon[horizon == 1, ris]` at the one week horizon, `r relative_wis_by_horizon[horizon == 2, ris]` at the two week horizon, `r relative_wis_by_horizon[horizon == 3, ris]` at the three week horizon, and `r relative_wis_by_horizon[horizon == 4, ris]` at the four week horizon, indicating that the ensemble forecast outperformed the surrogate forecast for all horizons by approximately 100% on average with the surrogate model performing worst at the one and four-week horizon.
-Much of this outperformance was driven by a small subset of forecasts with relative performance having a heavy tail (Figure \@ref(fig:assemble-eval) a). 
-If we instead consider median relative performance (note not a proper scoring rule) we find that, relative to the ensemble, the surrogate scored `r relative_median_wis_by_horizon[horizon == 1, ris]` at the one week horizon, `r relative_median_wis_by_horizon[horizon == 2, ris]` at the two week horizon, `r relative_median_wis_by_horizon[horizon == 3, ris]` at the three week horizon, and `r relative_median_wis_by_horizon[horizon == 4, ris]` at the four week horizon.
-We see little evidence that relative forecast quality decreased with increasing forecast horizon, though the tail of the distribution appears slightly heavier at the four-week time horizon (Figure \@ref(fig:assemble-eval) a).
+Evaluating the ensemble and surrogate models using the WIS across all locations and forecast dates we found that the mean relative performance of the surrogate model was `r relative_wis_by_horizon[horizon == 1, ris]` at the one week horizon, `r relative_wis_by_horizon[horizon == 2, ris]` at the two week horizon, `r relative_wis_by_horizon[horizon == 3, ris]` at the three week horizon, and `r relative_wis_by_horizon[horizon == 4, ris]` at the four week horizon, indicating that the ensemble forecast outperformed the surrogate forecast for all horizons by at least 25% and that the relative performance of the surrogate model degraded as the forecast horizon increased.
+Much of this outperformance, especially at longer forecast horizons, was driven by a relatively small subset of forecasts with relative performance having a heavy tail (Figure \@ref(fig:assemble-eval) a). 
+If we instead consider median relative performance (note this is not a proper scoring rule) we find that, relative to the ensemble, the surrogate scored `r relative_median_wis_by_horizon[horizon == 1, ris]` at the one week horizon, `r relative_median_wis_by_horizon[horizon == 2, ris]` at the two week horizon, `r relative_median_wis_by_horizon[horizon == 3, ris]` at the three week horizon, and `r relative_median_wis_by_horizon[horizon == 4, ris]` at the four week horizon.
+This would suggest that an increasingly skewed score distribution as the forecast horizon increased is responsible for the increase in the mean relative score (Figure \@ref(fig:assemble-eval) a).
 `r relative_wis_thresholds[, better_than]` of individual surrogate forecasts scored better than the comparable ensemble forecast, `r relative_wis_thresholds[, fifty_percent]` performed within 50% of the comparable ensemble forecast, and `r relative_wis_thresholds[, more_than_100_percent]` had a more than 100% worse WIS than the comparable ensemble forecast.
 
 The surrogate model's relative performance varied over time with substantially worse performance from January to March compared to later in the year across all forecast horizons based on changes in the relative score distribution and its summary statistics (Figure \@ref(fig:assemble-eval) b).
-The majority of the difference in performance appeared to be driven by a thicker right tail with this being a particular feature of forecasts at longer horizons. Forecast performance in March had a bimodal distribution at the four-week horizon with a substantial fraction of surrogate forecasts outperforming the ensemble.
+The majority of the difference in performance appeared to be driven by a thicker right tail with this being a particular feature of forecasts at longer horizons. Forecast performance in March had a bimodal distribution at the four-week horizon with a substantial fraction of surrogate forecasts outperforming the ensemble and a substantial fraction substantially underperforming.
 This variation in performance may have been linked to the BA.2 wave which peaked in most locations during this period if the surrogate model was more likely to overpredict peak incidence than the ensemble forecast.
 
 There was also substantial variation across forecast locations with the surrogate performing relatively well in some locations at some forecast horizons, for example, the four-week horizon in the United Kingdom, and badly in others, for example, the four-week forecast in Switzerland (Figure \@ref(fig:assemble-eval) c).
-In general, across locations, as observed overall, relative forecast performance was comparable across horizons though with a heavier right tail at longer horizons. Some locations showed less of this behaviour, for example, Spain, and in some, it was very dominant, for example, Switzerland. 
+In general, across locations, as observed overall, relative forecast performance degraded across horizons with a heavier right tail at longer horizons. Some locations showed less of this behaviour, for example, Spain, and in some, it was very dominant, for example, Switzerland. 
 
 ```{r make-rwis-plots}
 plot_rwis_horizon <- relative_wis |>
@@ -535,20 +553,23 @@ suppressWarnings(print(p))
 
 ### Forecast calibration {-}
 
-Overall the surrogate model was relatively well calibrated at the 30%, 60% and 90% prediction intervals whilst the ensemble model was in general poorly calibrated with calibration becoming worse at larger prediction intervals (Figure \@ref(fig:plot-coverage) a).
-When stratified by forecast horizon the ensemble forecast was best calibrated at the one-week forecast horizon and then became progressively less well calibrated as the forecast horizon increased with the worst calibration at the 90% prediction interval (Figure \@ref(fig:plot-coverage) a). 
+Overall the surrogate model was relatively well calibrated at the 30%, 60% and 90% prediction interval, though with a tendency to over cover, with empirical coverage of `r overall_coverage[range %in% "30% interval", Surrogate]`%, `r overall_coverage[range %in% "60% interval", Surrogate]`%, `r overall_coverage[range %in% "90% interval", Surrogate]`% respectively.
+The ensemble model was less well calibrated, with a tendency to under cover with empirical coverage of `r overall_coverage[range %in% "30% interval", Ensemble]`%, `r overall_coverage[range %in% "60% interval", Ensemble]`%, `r overall_coverage[range %in% "90% interval", Ensemble]`% respectively (Figure \@ref(fig:plot-coverage) a).
+When stratified by forecast horizon the ensemble forecast was best calibrated at the one-week forecast horizon, and then became progressively less well calibrated as the forecast horizon increased (Figure \@ref(fig:plot-coverage) a). 
 In comparison, the surrogate forecast was less well calibrated than the ensemble forecast at the one-week forecast horizon with a tendency to have a larger empirical coverage than required  (Figure \@ref(fig:plot-coverage) a).
-At longer horizons and narrower prediction intervals the surrogate forecast transitioned to being well calibrated and then had lower coverage than optimal though greater coverage than the ensemble forecast.
-This was not the case for the 90% prediction interval where the surrogate model stably covered slightly more than the expected interval indicating forecasts were overly uncertain for this interval. 
+At longer horizons and narrower prediction intervals the surrogate forecast became better calibrated though with a tendency to under cover.
+This was not the case for the 90% prediction interval where the surrogate model covered more than the expected interval, for all horizons, indicating forecasts were overly uncertain for this interval regardless of horizon. 
 
 Stratifying calibration by quantile and forecast horizon the ensemble forecast was overly certain at all horizons for quantiles larger than the median whilst being comparably well calibrated for intervals below the median (Figure \@ref(fig:plot-coverage) c).
-In contrast, the surrogate ensemble forecast was generally equally well calibrated at shorter horizons with a tendency to underpredict.
-At longer horizons, however, quantiles below the median were liable to have poor coverage suggesting a bias towards over-predicting.
+This behaviour became more prominant as forecast horizon increased.
+In contrast, the surrogat forecast was generally equally well calibrated at across horizons with a tendency to over cover for intervals above the median.
+At longer horizons, however, quantiles below the median became liable to have under coverage.
 
-Breaking down the relative weighted interval score by forecast interval we observe that the majority of the difference in overall scores is likely driven by differences in the outer intervals and in particular the tails of the forecast (Figure \@ref(fig:plot-coverage) b).
-This is true across forecast horizons but the magnitude of the difference increases. This implies that the surrogate and ensemble model produced comparably performing point forecasts and indeed if we consider the absolute error of the median forecast population weighted incidence we see that the median for the ensemble forecast was `r overall_ae_median[model == "Ensemble", round(Median, digits = 1)]` whilst the median for the surrogate forecast was `r overall_ae_median[model == "Surrogate", round(Median, digits = 1)]`.
-However, when we consider the mean absolute error of the median we find that the ensemble forecast outperformed the surrogate forecast (`r overall_ae_median[model == "Ensemble", round(Mean, digits = 1)]` vs. `r overall_ae_median[model == "Surrogate", round(Mean, digits = 1)]`) as noted elsewhere.
-This indicates a right skew in performance for the surrogate model point forecasts not observed for the ensemble forecast which matches that observed when evaluating the full predictive distributions of both forecasts.
+Breaking down the relative weighted interval score by forecast interval we observe that the surrogate modeel produces forecasts that differ most from the ensemble in the outer intervals and in particular the tails of the forecast (Figure \@ref(fig:plot-coverage) b).
+This is true across forecast horizons but the magnitude of the difference increases.
+If we consider the absolute error of the median forecast population weighted incidence we see that the median for the ensemble forecast was `r overall_ae_median[model == "Ensemble", round(Median, digits = 1)]` whilst the median for the surrogate forecast was `r overall_ae_median[model == "Surrogate", round(Median, digits = 1)]`.
+When we consider the mean absolute error of the median we find that the ensemble forecast outperformed the surrogate forecast (`r overall_ae_median[model == "Ensemble", round(Mean, digits = 1)]` vs. `r overall_ae_median[model == "Surrogate", round(Mean, digits = 1)]`) which is comparable on the relative scale to the difference in performance observed using WIS.
+This implies a similarly skewed distribution for the relaive point forecasts from the surrogate model point forecasts compared to the ensemble forecast which again  matches that observed when evaluating the full predictive distributions of both forecasts.
 
 ```{r plot-coverage, fig.height = 12, fig.width = 18, out.width = "95%", fig.cap = "a.) Empirical coverage of the surrogate and ensemble forecasts at the 90\\%, 60\\%, and 30\\% prediction intervals stratified by forecast horizon. Ideally, a well-calibrated forecast should have empirical coverage for a given prediction interval that equals the range of that interval (i.e 90\\%). b.) Median relative weighted interval score by quantile and forecast horizon for the surrogate forecast compared to the ensemble forecast. c.) Empirical coverage by quantile for both the surrogate and ensemble forecasts. A well-calibrated forecast should have empirical quantiles that match the theoretical ones. The green area of this figure corresponds to conservative forecasts."}
 p <- (
@@ -581,13 +602,12 @@ We further provide a fully reproducible workflow for running and evaluating this
 
 Over the 6 months of the study period, we found that our surrogate model produced forecasts that were visually similar to those from the forecast hub ensemble on the log scale though with greater uncertainty.
 In a subset of example locations, we observed some variation in performance across locations, that the ensemble appeared biased toward underprediction, and the surrogate model appeared slightly biased toward overprediction.
-Evaluating the relative performance of the surrogate model compared to the European forecast hub ensemble we found that the mean performance was substantially worse, which was driven by a relatively small subset of forecasts.
-The median relative performance was only marginally worse across forecast horizons with the distribution of relative scores having a heavy right tail.
+Evaluating the relative performance of the surrogate model compared to the European forecast hub ensemble we found that the mean performance was substantially worse, which was driven by a relatively small subset of vey poorly performing forecasts.
+Median forecast performance of the surrogate model was also worse when compared to forecasts from the ensemble though the majority of surrogate forecasts were within 50% of the performance observed for the ensemble forecast.
 Performance varied by location and forecast date with the surrogate model performing worse in the first part of 2022 which may have been linked to incidence rates peaking across forecast locations linked to the spread of BA.2.
-In general, the relative performance of the surrogate model was stable across forecast horizons, unlike our previous methods used for real-time forecasting [@Bosse2022-hm; @EuroHub; @EpiNow2] which rapidly became less performant, though the distribution of relative performance did have an increasingly heavy right tail as the forecast horizon increased indicating a greater share of forecasts performing very poorly in comparison to the hub ensemble.
-The forecast hub ensemble was poorly calibrated, particularly at longer forecast horizons and bigger prediction intervals whereas the surrogate model was substantially better calibrated for all targets though it tended to be overly uncertain at large intervals.
-Stratifying the relative weighted interval score by interval we found that larger intervals (i.e the tails of the forecast distribution) were responsible for the majority of the difference in performance. 
-Indeed, the median point performance of the surrogate and ensemble models was comparable though the surrogate model performed substantially worse on average due to its skewed performance distribution.
+In general, the relative performance of the surrogate model degraded as forecast horizons increas with the distribution of relative performance having an increasingly heavy right tail as the forecast horizon increased indicating a greater share of forecasts performing very poorly in comparison to the hub ensemble.
+The forecast hub ensemble was poorly calibrated, particularly at longer forecast horizons and bigger prediction intervals, compared to the surrogate model though the surrogate model tended to be overly uncertain at large intervals.
+Evaluating point forecast performance indicated a similar pattern of performance as that observed using the full predictive distribution though relative performance of the surrogate model generally improved.
 
 ## Limitations {-}
 
@@ -615,9 +635,10 @@ There are no other studies in the epidemiology literature which we are aware of 
 Few studies focus on delivering computationally feasible forecasting models in a reproducible framework backed by an openly accessible compute platform. 
 However, the US [@Cramer2022-sp], European [@Sherratt2022-ue], and Germany/Poland [@Bracher2021-wk] forecasting hubs have published a range of evaluations of forecasts submitted to their platforms and the relative performance of their ensembles. 
 In general, these studies have struggled to draw general conclusions about the structural assumptions of forecast models they consider "good" (generally they have defined this as minimising the weighted interval score as done in this study). 
-The poor calibration of the forecast ensembles produced by median Hub ensembles as been noted repeatedly [@Cramer2022-sp; @Bracher2021-wk; @Sherratt2022-ue] but little progress has been made understanding the causes or suggesting alternatives forecasts for policy makers to use.
-The US forecast hub identified the top 5 performing models and noted the structural assumptions they made [@Cramer2022-sp].
-However, they did not extensively compare and contrast these conclusions to arrive at a set of desired forecast assumptions as done in this study to motivate the surrogate model or explore the performance of a forecasting model designed with these assumptions in mind.
+The poor calibration of the forecast ensembles produced by median Hub ensembles has been noted repeatedly [@Cramer2022-sp; @Bracher2021-wk; @Sherratt2022-ue] but little progress has been made understanding the causes or suggesting alternatives forecasts for policy makers to use.
+Progress understanding which structural model features lead to better infectious disease forecasts has been limited.
+The US forecast hub identified the top 5 performing models and noted the structural assumptions they made but couldn't directly link assumptions with performance [@Cramer2022-sp].
+They also did not extensively compare and contrast these conclusions to arrive at a set of desired forecast assumptions as done in this study to motivate the surrogate model or explore the performance of a forecasting model designed with these assumptions in mind.
 Similarly, the Germany and Poland forecasting hubs was able to identify forecast models that performed comparably as well as their ensemble forecasts but did not derive structural assumptions that led to this out-performance or detail explicitly what the desirable performance characteristics would be, aside from optimising the weighted interval score.
 All comparable forecast hub projects found that their ensemble was often the best choice, had desirable characteristics such as robustness, though this was rarely fully defined, and should be the output used by forecast consumers [@Cramer2022-sp; @Bracher2021-wk; @Sherratt2022-ue].
 In general, during the study period, all projects used the same unweighted median ensemble forecast of all submissions. 
@@ -651,8 +672,8 @@ However, this work is limited by the lack of large-scale forecast ensembling pro
 ## Conclusions {-}
 
 We conclude that our simplified forecast model may have captured some of the dynamics of the hub ensemble but that more work needs to be done to understand the epidemiological model that represents its behaviour and whether or not this is the optimal choice for stakeholders' requirements.
-We also conclude that our findings are largely driven by the choice of evaluation measure used by the forecast hub and that if this is misspecified then the forecast hub submissions may not be optimised to forecast users' expectations or requirements.
-Our work may be useful for forecast users to understand the inherent assumptions of the forecasts they are making use of and to researchers thinking about how to develop forecasts that perform similarly to current multi-model and multi-team forecast ensembles that are trusted by stakeholders.
+We also conclude that our findings may belargely driven by the choice of evaluation measure used by the forecast hub and that if this is misspecified then the forecast hub submissions may not be optimised to forecast users' expectations or requirements.
+Our work is useful for forecast users to understand the inherent assumptions of the forecasts they are making use of and to researchers thinking about how to develop forecasts that perform similarly to current multi-model and multi-team forecast ensembles that are trusted by stakeholders.
 
 # Additional Information and Declarations {-}
 
